# deploy-inso-app

./: .gitignore  Dockerfile  README.md  action.yaml  pyproject.toml
src/: actions.py  index.py
