[tool.poetry]
name = "deploy-inso-app"
version = "0.1.0"
description = ""
authors = ["Magnus Moan <magnus.moan@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cognite-sdk-experimental = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pre-commit = "^2.5.1"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
